[gd_scene load_steps=2 format=3 uid="uid://t8f4t7jkllqu"]

[ext_resource type="Script" path="res://websocket.gd" id="1_3yaqw"]

[node name="WebSocket_Connection" type="Node"]
script = ExtResource("1_3yaqw")

[node name="JSON_Button" type="Button" parent="."]
offset_left = 145.0
offset_top = 366.0
offset_right = 503.0
offset_bottom = 514.0
text = "Send Data: {\"Foo\":{\"bar\":42}}
This should be OK"

[node name="String_Button" type="Button" parent="."]
offset_left = 628.0
offset_top = 364.0
offset_right = 986.0
offset_bottom = 512.0
text = "Send Data: \"foobar\"
This should cause an Internal Server Error"

[node name="Status_Label" type="Label" parent="."]
offset_left = 2.0
offset_top = 4.0
offset_right = 218.0
offset_bottom = 27.0
text = "Connection Status: "

[node name="Server_Response" type="Label" parent="."]
offset_left = 2.0
offset_top = 37.0
offset_right = 840.0
offset_bottom = 235.0
text = "Response: None"

[node name="Response_Code" type="Label" parent="."]
offset_left = 2.0
offset_top = 21.0
offset_right = 312.0
offset_bottom = 44.0
text = "Response Code: "

[connection signal="pressed" from="JSON_Button" to="." method="_on_json_button_pressed"]
[connection signal="pressed" from="String_Button" to="." method="_on_string_button_pressed"]
